fix(projects): Fix carousel onwrap

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -15,7 +15,7 @@
 .card-container > figcaption {
     @apply
         absolute inset-0 flex items-center rounded-xl
-        justify-center text-white bg-black bg-opacity-75
+        justify-center text-white bg-background bg-opacity-100
         flex-col opacity-0
         transition-opacity
         duration-300 text-center;
@@ -25,10 +25,6 @@
     @apply text-white text-xl font-bold pb-3;
 }
 
-.card-container > figcaption > button {
-    @apply
-        transition ease-in duration-300 text-white bg-gradient-to-br
-        from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4
-        focus:outline-none focus:ring-green-200 dark:focus:ring-green-800
-        font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
+.card-container > figcaption > div > button {
+    @apply w-8 aspect-square;
 }
