--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -6,7 +6,10 @@
     white-space: nowrap;
     transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1.000);
     align-items: center;
+    overflow-wrap: break-word;
 }
+
+
 
 .carousel-item {
     display: inline-flex;
