--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -4,5 +4,5 @@
 
 
 .min-h-screen-custom {
-    min-height: 70vh;
+    min-height: 80vh;
 }
